[package]
authors = ["Ivan Nejgebauer <inejge@gmail.com>"]
description = "Pure-Rust LDAP Client"
documentation = "https://docs.rs/ldap3"
keywords = ["ldap", "client", "tokio", "async"]
categories = ["authentication", "network-programming"]
license = "MIT/Apache-2.0"
name = "ldap3"
readme = "README.md"
repository = "https://github.com/inejge/ldap3"
version = "0.12.0-beta.1"
edition = "2024"

[package.metadata.docs.rs]
default-features = false
features = ["sync", "tls", "gssapi"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "io-util", "sync", "time", "net"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio-stream = "0.1.17"
bytes = "1.10.1"
nom = "7.1.3"
url = "2.5.7"
futures = "0.3.31"
percent-encoding = "2.3.2"
futures-util = "0.3.31"
log = "0.4.28"
thiserror = "2.0.16"
native-tls = { version = "0.2.14", optional = true }
tokio-native-tls = { version = "0.3.1", optional = true }
rustls = { version = "0.23.31", optional = true, default-features = false, features = ["logging", "std", "tls12"] }
tokio-rustls = { version = "0.26.2", optional = true, default-features = false, features = ["logging", "tls12"] }
rustls-native-certs = { version = "0.8.1", optional = true }
x509-parser = { version = "0.18.0", optional = true }
ring = { version = "0.17.14", optional = true }
cross-krb5 = { version = "0.4.2", optional = true }
either = { version = "1.15.0", optional = true }
sspi = { version = "0.16.1", optional = true }
async-trait = "0.1.89"

# ntlm support
hmac = { version = "0.12", optional = true }
md4 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
byteorder = { version = "1.4", optional = true }
hex = { version = "0.4.3", optional = true }
des = { version = "0.8.1", optional = true }
rand = { version = "0.9.2", optional = true }
sha2 = { version = "0.10.9", optional = true }

[dependencies.lber]
path = "lber"
version = "0.5.1"

[features]
default = ["sync", "tls"]
tls = ["tls-native"]
tls-native = ["dep:native-tls", "dep:tokio-native-tls", "tokio/rt"]
tls-rustls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-native-certs", "dep:x509-parser", "tokio/rt"]
tls-rustls-ring = ["tls-rustls","rustls/ring","rustls-provider"]
tls-rustls-aws-lc-rs = ["tls-rustls","rustls/aws_lc_rs","rustls-provider"]
rustls-provider = []
sync = ["tokio/rt"]
gssapi = ["cross-krb5","dep:ring","dep:either"]
ntlm = ["sspi","dep:ring"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "io-util", "sync", "time", "net", "rt-multi-thread"] }
env_logger = "0.11.8"

[workspace]
members = [".", "lber"]
